Replace email confirmation with reCAPTCHA
